Bug 941649 - Part 2: Add a workerThreadCount shell testing function. (r=luke)